// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaginationWidget.vue calls buttons 1`] = `
[MockFunction] {
  "calls": [
    [
      "pagination-previous-button-clicked",
    ],
    [
      "pagination-next-button-clicked",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`PaginationWidget.vue renders nothing if no next or prev props provided 1`] = `
<div>
  <div
    class="pagination"
  >
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;

exports[`PaginationWidget.vue renders pagination 1`] = `
<div>
  <div
    class="pagination"
  >
    <button
      class="medium rounded primary k-button"
      data-v-6f773baa=""
      type="button"
    >
      
      <!---->
      
      
       ‹ Previous 
      
      <!---->
    </button>
    <button
      class="medium rounded primary k-button"
      data-v-6f773baa=""
      type="button"
    >
      
      <!---->
      
      
       Next › 
      
      <!---->
    </button>
  </div>
</div>
`;
